--- a/src/main/resources/templates/table-add.html
+++ b/src/main/resources/templates/table-add.html
@@ -44,8 +44,8 @@
 <div class="container lg-5 mb-5">
     <h1>Добавление ресурсов работы</h1>
     <form action="/table/add" method="post">
-        <input type="text" th:name="name" placeholder="Введите название места работы" class="form-control"> <br>
-        <input type="text" th:name="place" placeholder="Введите место работы" class="form-control"> <br>
+        <input type="text" name="name" placeholder="Введите название места работы" class="form-control"> <br>
+        <input type="text" name="place" placeholder="Введите место работы" class="form-control"> <br>
         <button type="submit" class="btn btn-success">Добавить</button>
     </form>
 </div>
