--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       lang="en">
 <head>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
@@ -59,6 +60,16 @@
             <div th:if="${error != null ? 'has-error' : ''}" class="text-danger bg-dark">
                 <span th:text="${error}" />
             </div>
+            <div sec:authorize="isAuthenticated()">
+                <form  th:action="@{/logout}" class="mr-sm-2" method="post">
+                    <div class="form-group row">
+                        <div class="input-group">
+                            <input class="btn btn-outline-secondary" type="submit" value="Sign Out">
+                        </div>
+                    </div>
+                </form>
+            </div>
+
         </form>
       </div>
     </nav>
