--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html  xmlns:th="http://www.thymeleaf.org"
-       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
        lang="en">
 <head>
     <!-- Required meta tags -->
@@ -39,7 +38,7 @@
                 </div>
             </li>
         </ul>
-        <form sec:authorize="isAuthenticated()" th:action="@{/logout}" class="mr-sm-2" method="post">
+        <form th:action="@{/logout}" class="mr-sm-2" method="post">
             <div class="form-group row">
                 <div class="input-group">
                     <input class="btn btn-outline-secondary" type="submit" value="Sign Out">
