--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       lang="en">
 <head>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
@@ -23,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+                    <a class="nav-link" href="/login">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="/table">Access<span class="sr-only"></span></a>
@@ -39,6 +40,15 @@
                     </div>
                 </li>
             </ul>
+            <div sec:authorize="isAuthenticated()">
+                <form  th:action="@{/logout}" class="mr-sm-2" method="post">
+                    <div class="form-group row">
+                        <div class="input-group">
+                            <input class="btn btn-outline-secondary" type="submit" value="Sign Out">
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </nav>
 
@@ -51,33 +61,7 @@
         </div>
     </div>
 
-    <div class="container w">
-        <div class="row text-center">
-            <br>
-            <div class="col-lg-4">
-                <i class="fa fa-address-book"></i>
-                <h4>Дизайн</h4>
-                <p>
-                    Создан с помощью Bootstrap
-                </p>
-            </div>
-            <div class="col-lg-4">
-                <i class="fa fa-database"></i>
-                <h4>Структура</h4>
-                <p>
-                    Используется PostgreSQL
-                </p>
-            </div>
-            <div class="col-lg-4">
-                <i class="fa fa-bell"></i>
-                <h4>Помощь</h4>
-                <p>
-                    Обращайтесь к администратору
-                </p>
-            </div>
-        </div>
-        <br><br>
-    </div>
+    <div th:insert="blocks/fronts :: fronts"></div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
