--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+            <a class="nav-link" href="/login">Home <span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="/table">Access<span class="sr-only"></span></a>
@@ -84,33 +84,7 @@
         </div>
     </div>
 
-    <div class="container w">
-        <div class="row text-center">
-            <br>
-            <div class="col-lg-4">
-                <i class="fa fa-address-book"></i>
-                <h4>Дизайн</h4>
-                <p>
-                    Создан с помощью Bootstrap
-                </p>
-            </div>
-            <div class="col-lg-4">
-                <i class="fa fa-database"></i>
-                <h4>Структура</h4>
-                <p>
-                    Используется PostgreSQL
-                </p>
-            </div>
-            <div class="col-lg-4">
-                <i class="fa fa-bell"></i>
-                <h4>Помощь</h4>
-                <p>
-                    Обращайтесь к администратору
-                </p>
-            </div>
-        </div>
-        <br><br>
-    </div>
+    <div th:insert="blocks/fronts :: fronts"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
