--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -13,40 +13,7 @@
     <link rel="stylesheet" th:href="@{/static/CSS/font-awesome.min.css}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <span class="navbar-brand" href="#">Work with PostgreSQL</span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link disabled" href="login.html">Home<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/table">Access<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Questions
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item disabled" href="#">Write to administrator</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://getbootstrap.com/">Something</a>
-                </div>
-            </li>
-        </ul>
-        <form th:action="@{/logout}" class="mr-sm-2" method="post">
-            <div class="form-group row">
-                <div class="input-group">
-                    <input class="btn btn-outline-secondary" type="submit" value="Sign Out">
-                </div>
-            </div>
-        </form>
-    </div>
-</nav>
+<header th:insert="blocks/header :: header"></header>
 
 <div class="container-fluid">
     <div class="alert alert-warning" role="alert">
@@ -68,33 +35,7 @@
     </div>
 </div>
 
-<div class="container w">
-    <div class="row text-center">
-        <br>
-        <div class="col-lg-4">
-            <i class="fa fa-address-book"></i>
-            <h4>Дизайн</h4>
-            <p>
-                Создан с помощью Bootstrap
-            </p>
-        </div>
-        <div class="col-lg-4">
-            <i class="fa fa-database"></i>
-            <h4>Структура</h4>
-            <p>
-                Используется PostgreSQL
-            </p>
-        </div>
-        <div class="col-lg-4">
-            <i class="fa fa-bell"></i>
-            <h4>Помощь</h4>
-            <p>
-                Обращайтесь к администратору
-            </p>
-        </div>
-    </div>
-    <br><br>
-</div>
+<div th:insert="blocks/fronts :: fronts"></div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
