--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -10,7 +10,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Home<span class="sr-only"></span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link disabled" href="/table">Access<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/table">Access<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item dropdown">
