--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,8 +26,11 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/login">Home <span class="sr-only"></span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link disabled" href="/table">Access<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/table">Access<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -52,12 +55,15 @@
         </div>
     </nav>
 
-
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="col col-lg-6">
-                <h1>Click <a th:href="@{/login}">here</a> to see a greeting.</h1>
-            </div>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Доброго времени суток!</h1>
+            <p class="lead">Эта страница используется только для приветствия.</p>
+            <hr class="my-4">
+            <p>Перейдите по ссылке, чтобы войти в систему.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" th:href="@{/login}" role="button">Перейти</a>
+            </p>
         </div>
     </div>
 
