--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,8 +26,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="/login">Home <span class="sr-only"></span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" sec:authorize="isAnonymous()">
             <a class="nav-link disabled" href="/table">Access<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a class="nav-link" href="/table">Access<span class="sr-only"></span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
