--- a/src/main/resources/templates/table-add.html
+++ b/src/main/resources/templates/table-add.html
@@ -16,11 +16,13 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container lg-5 mb-5">
-    <h1>Добавление ресурсов работы</h1>
+    <h1>Добавление данных пользователя</h1>
     <form action="/table/add" method="post">
-        <input type="text" name="name" placeholder="Введите название места работы" class="form-control"> <br>
-        <input type="text" name="place" placeholder="Введите место работы" class="form-control"> <br>
-        <button type="submit" class="btn btn-success">Добавить</button>
+        <input type="text" name="name" placeholder="Введите Имя" class="form-control"> <br>
+        <input type="text" name="surname" placeholder="Введите Фамилию" class="form-control"> <br>
+        <input type="text" name="secname" placeholder="Введите Отчество" class="form-control"> <br>
+        <h3>Сегодняшняя дата поставится автоматически</h3>
+        <button type="submit" class="btn btn-success">Сохранить данные</button>
     </form>
 </div>
 
