--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -8,6 +8,13 @@
     <title>Database</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=
+            "sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity=
+            "sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" th:href="@{/static/CSS/style.css}">
     <link rel="stylesheet" th:href="@{/static/CSS/font-awesome.min.css}">
@@ -16,34 +23,137 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container-fluid">
-    <div class="alert alert-warning" role="alert">
-        <a href="/table/add" class="alert-link h4">Добавить ресурсы работы</a>
-    </div>
-    <h1 class="text-center display-2">Jobs</h1>
-    <div th:each="element : ${jobs}" class="alert alert-info">
+    <h1 class="text-center display-2">Taxplayers</h1>
+    <a href="/table/add" type="button" class="btn btn-success btn-lg btn-block">Добавить данные пользователя</a>
+<!--    <div th:each="element : ${taxplayers}" class="alert alert-info">-->
+<!--        <div class="row">-->
+<!--            <div class="row col">-->
+<!--                <h4>Name:</h4>-->
+<!--                <h4 th:text="${element.name}"/>-->
+<!--            </div>-->
+<!--            <div class="row col">-->
+<!--                <h4>Sirname:</h4>-->
+<!--                <h4 th:text="${element.surname}"/>-->
+<!--            </div>-->
+<!--            <div class="row col">-->
+<!--                <h4>Secname:</h4>-->
+<!--                <h4 th:text="${element.secname}"/>-->
+<!--            </div>-->
+<!--            <div class="row col">-->
+<!--                <h4>Date:</h4>-->
+<!--                <h4 th:text="${element.date}"/>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--         &lt;!&ndash; th:href="'/table/job/' + ${element.id}" &ndash;&gt;-->
+<!--        <a class="btn btn-info" role="button">Подробнее</a>-->
+<!--    </div>-->
+</div>
+
+<div class="album py-5 bg-light">
+    <div class="container-fluid">
+
         <div class="row">
-            <div class="row col">
-                <h4>Name:</h4>
-                <h4 th:text="${element.name}"/>
+            <div th:each="element : ${taxplayers}" class="col-md-4">
+                <div class="card mb-4 shadow-lg">
+                    <div class="card-body">
+                        <h2 th:text="${element.name}"></h2>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"> <h4 th:text="${element.surname}"/></li>
+                            <li class="list-group-item"> <h4 th:text="${element.secname}"/></li>
+                        </ul>
+                        <p class="card-text">
+                            <h3>Date:</h3> <h4 th:text="${element.date}"/>
+                        </p>
+                        <a class="btn btn-info show-add" role="button">Подробнее »</a>
+                    </div>
+                </div>
             </div>
-            <div class="row col">
-                <h4>Place:</h4>
-                <h4 th:text="${element.place}"/>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect fill="#55595c" width="100%" height="100%"></rect><text fill="#eceeef" dy=".3em" x="50%" y="50%">Thumbnail</text></svg>
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted">9 mins</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect fill="#55595c" width="100%" height="100%"></rect><text fill="#eceeef" dy=".3em" x="50%" y="50%">Thumbnail</text></svg>
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted">9 mins</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect fill="#55595c" width="100%" height="100%"></rect><text fill="#eceeef" dy=".3em" x="50%" y="50%">Thumbnail</text></svg>
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted">9 mins</small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <a th:href="'/table/' + ${element.id}" class="btn btn-info">Подробнее</a>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade news-add" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+            <form action="/table" method="post">
+                <div class="modal-header">
+                    <h5 class="modal-title">Подробные данные пользователя</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+<!--                    <div class="input-group mb-3">-->
+<!--                        <input type="text" name="name" placeholder="Введите Имя" class="form-control">-->
+<!--                    </div>-->
+<!--                    <div class="input-group">-->
+<!--                        <div class="input-group-prepend">-->
+<!--                            <span class="input-group-text"><-&ndash;&gt;</span>-->
+<!--                        </div>-->
+<!--                        <input type="text" name="surname" placeholder="Введите Фамилию" class="form-control">-->
+<!--                        <input type="text" name="secname" placeholder="Введите Отчество" class="form-control">-->
+<!--                    </div>-->
+<!--                    <br>-->
+                    <p>//TODO: 4 таблицы с выводом из бд</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
 <div th:insert="blocks/fronts :: fronts"></div>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=
-        "sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity=
-        "sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="../static/js/table-modal.js"></script>
 
 </body>
 </html>
