--- a/src/main/resources/templates/table-edit.html
+++ b/src/main/resources/templates/table-edit.html
@@ -16,11 +16,13 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container lg-5 mb-5">
-    <h1>Редактирование ресурсов работы</h1>
-    <div th:each="element : ${job}">
+    <h1>Редактирование ресурсов</h1>
+    <div th:each="element : ${taxpayer}">
         <form method="post">
-            <input type="text" th:value="${element.name}" name="name" placeholder="Введите название места работы" class="form-control"> <br>
-            <input type="text" th:value="${element.place}" name="place" placeholder="Введите место работы" class="form-control"> <br>
+            <input type="text" th:value="${element.name}" name="name" placeholder="Введите Имя" class="form-control"> <br>
+            <input type="text" th:value="${element.surname}" name="surname" placeholder="Введите Фамилию" class="form-control"> <br>
+            <input type="text" th:value="${element.secname}" name="secname" placeholder="Введите Отчество" class="form-control"> <br>
+            <h3>Дата останется прежней</h3>
             <button type="submit" class="btn btn-success">Обновить</button>
         </form>
     </div>
