--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -121,38 +121,26 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade news-add" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
-        <div class="modal-content">
-            <form action="/table" method="post">
-                <div class="modal-header">
-                    <h5 class="modal-title">Подробные данные пользователя</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-
-<!--                    <div class="input-group mb-3">-->
-<!--                        <input type="text" name="name" placeholder="Введите Имя" class="form-control">-->
-<!--                    </div>-->
-<!--                    <div class="input-group">-->
-<!--                        <div class="input-group-prepend">-->
-<!--                            <span class="input-group-text"><-&ndash;&gt;</span>-->
-<!--                        </div>-->
-<!--                        <input type="text" name="surname" placeholder="Введите Фамилию" class="form-control">-->
-<!--                        <input type="text" name="secname" placeholder="Введите Отчество" class="form-control">-->
-<!--                    </div>-->
-<!--                    <br>-->
-                    <p>//TODO: 4 таблицы с выводом из бд</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+<!--<div class="modal fade news-add" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
+<!--    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">-->
+<!--        <div class="modal-content">-->
+<!--            <form action="/table" method="post">-->
+<!--                <div class="modal-header">-->
+<!--                    <h5 class="modal-title">Подробные данные пользователя</h5>-->
+<!--                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--                        <span aria-hidden="true">&times;</span>-->
+<!--                    </button>-->
+<!--                </div>-->
+<!--                <div class="modal-body">-->
+<!--                    <p>//TODO: 4 таблицы с выводом из бд</p>-->
+<!--                </div>-->
+<!--                <div class="modal-footer">-->
+<!--                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <div th:insert="blocks/fronts :: fronts"></div>
 
